fix a Firefox bug mis-aligning glyphicons in menu bar

--- a/web/themes/custom/legacy/css/src/_c-NavBar.less
+++ b/web/themes/custom/legacy/css/src/_c-NavBar.less
@@ -55,6 +55,7 @@
   & > .active { // TODO use a class
     background-color: var(--color-accent, @g-color-accent);
   }
+  .glyphicons { height: 0; } // fix a Firefox alignment bug
   .glyphicons-chevron-down { padding-left: 1ch; }
 }
 
